k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cms-laravel
  labels:
    name: cms-laravel
    app: liberu-cms
